Completed development of drafts and coreviewer APIs
