# film-manager-implementation/index.js
@@ -21,6 +21,9 @@ const apiFilmsPrivateFilmId = require('./controllers/ApifilmsprivatefilmId.js');
 const apiFilmsPublic = require('./controllers/Apifilmspublic.js');
 const apiFilmsPublicFilmId = require('./controllers/ApifilmspublicfilmId.js');
 const apiFilmsPublicFilmIdReviews = require('./controllers/ApifilmspublicfilmIdreviews.js');
+const apiFilmsPublicFilmIdReviewsReviewerIdDrafts = require('./controllers/ApifilmspublicfilmIdreviewsreviewerIddrafts.js');
+const apiFilmsPublicFilmIdReviewsReviewerIdDraftsCurrent = require('./controllers/ApifilmspublicfilmIdreviewsreviewerIddraftscurrent.js');
+const apiFilmsPublicFilmIdReviewsReviewerIdCoreviewer = require('./controllers/ApifilmspublicfilmIdreviewsreviewerIdcoreviewer.js');
 const apiFilmsPublicFilmIdReviewsReviewerId = require('./controllers/ApifilmspublicfilmIdreviewsreviewerId.js');
 const apiFilmsPublicInvited = require('./controllers/Apifilmspublicinvited.js');
 const apiFilmsPublicAssignments = require('./controllers/Apifilmspublicassignments.js');
@@ -101,6 +104,10 @@ app.post('/api/films/public/:filmId/reviews', isLoggedIn, apiFilmsPublicFilmIdRe
 app.get('/api/films/public/:filmId/reviews/:reviewerId', apiFilmsPublicFilmIdReviewsReviewerId.getSingleReview);
 app.put('/api/films/public/:filmId/reviews/:reviewerId', isLoggedIn, apiFilmsPublicFilmIdReviewsReviewerId.updateSingleReview);
 app.delete('/api/films/public/:filmId/reviews/:reviewerId', isLoggedIn, apiFilmsPublicFilmIdReviewsReviewerId.deleteSingleReview);
+app.get('/api/films/public/:filmId/reviews/:reviewerId/drafts', isLoggedIn, apiFilmsPublicFilmIdReviewsReviewerIdDrafts.getReviewDrafts);
+app.post('/api/films/public/:filmId/reviews/:reviewerId/drafts', isLoggedIn, apiFilmsPublicFilmIdReviewsReviewerIdDrafts.submitReviewDraft);
+app.get('/api/films/public/:filmId/reviews/:reviewerId/drafts/current', isLoggedIn, apiFilmsPublicFilmIdReviewsReviewerIdDraftsCurrent.getCurrentReviewDraft);
+app.post('/api/films/public/:filmId/reviews/:reviewerId/coreviewer', isLoggedIn, apiFilmsPublicFilmIdReviewsReviewerIdCoreviewer.issueFilmCoreview);
 app.get('/api/users', isLoggedIn, apiUsers.getUsers);
 app.post('/api/users/authenticator', apiUsersAuthenticator.authenticateUser);
 app.delete('/api/users/authenticator/current', isLoggedIn,  apiUsersAuthenticatorCurrent.logoutUser);
